--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,9 @@ openmediavault (2.0.9) stable; urgency=low
 
   * Update locales.
   * Fix various issues.
+  * The network interface configuration page has been modified. Now only the
+    configuration values are displayed. Use the dashboard widget to show the
+    state of all network interfaces.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 22 May 2015 22:28:24 +0200
 
