--- a/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-05-24 01:26+0200\n"
-"PO-Revision-Date: 2015-05-23 23:29+0000\n"
+"POT-Creation-Date: 2015-05-24 10:02+0200\n"
+"PO-Revision-Date: 2015-05-24 08:04+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: German (http://www.transifex.com/projects/p/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -2114,7 +2114,10 @@ msgid "Network"
 msgstr "Netzwerk"
 
 msgid "Network interface '%s' (type=%s) already exists"
-msgstr "Netzwerk-Interface '%s' (Typ=%s) existiert bereits"
+msgstr "Netzwerkschnittstelle '%s' (Typ=%s) existiert bereits"
+
+msgid "Network interfaces"
+msgstr "Netzwerkschnittstellen"
 
 msgid "Neutral Zone"
 msgstr "Neutrale Zone"
@@ -3050,7 +3053,7 @@ msgid "Size"
 msgstr "Größe"
 
 msgid "Slaves"
-msgstr "Schnittstellen"
+msgstr "Sklaven"
 
 msgid "Sleep"
 msgstr "Schlafen"
