--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.0.10) stable; urgency=low
+
+  * Configure a Wi-Fi connection via omv-firstaid.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 24 May 2015 12:38:49 +0200
+
 openmediavault (2.0.9) stable; urgency=low
 
   * Update locales.
