--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-24 10:02+0200\n"
-"PO-Revision-Date: 2015-05-24 08:02+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-05-24 19:29+0000\n"
+"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -201,19 +201,19 @@ msgid "Add"
 msgstr "Añadir"
 
 msgid "Add VLAN connection"
-msgstr ""
+msgstr "Añadir conexión VLAN"
 
 msgid "Add Wi-Fi connection"
-msgstr ""
+msgstr "Añadir conexión Wi-Fi"
 
 msgid "Add bond connection"
-msgstr ""
+msgstr "Añadir conexión agrupada"
 
 msgid "Add devices to RAID device"
 msgstr "Añadir dispositivos al RAID"
 
 msgid "Add ethernet connection"
-msgstr ""
+msgstr "Añadir conexión ethernet"
 
 msgid "Add firewall rule"
 msgstr "Añadir regla de firewall"
@@ -978,7 +978,7 @@ msgid "Domain name"
 msgstr "Nombre de dominio"
 
 msgid "Domains used when resolving host names."
-msgstr ""
+msgstr "Dominios usados para resolver los nombres de host."
 
 msgid "Dominica"
 msgstr "Dominica"
@@ -1028,16 +1028,16 @@ msgid "Edit SSL certificate"
 msgstr "Editar certificado SSL"
 
 msgid "Edit VLAN connection"
-msgstr ""
+msgstr "Editar conexiones VLAN"
 
 msgid "Edit Wi-Fi connection"
-msgstr ""
+msgstr "Editar conexiones Wi-Fi"
 
 msgid "Edit bond connection"
-msgstr ""
+msgstr "Editar conexiones agrupadas"
 
 msgid "Edit ethernet connection"
-msgstr ""
+msgstr "Editar conexión ethernet"
 
 msgid "Edit firewall rule"
 msgstr " Editar reglas del Firewall"
@@ -1198,7 +1198,7 @@ msgid "Estonia"
 msgstr "Estonia"
 
 msgid "Ethernet"
-msgstr ""
+msgstr "Ethernet"
 
 msgid "Ethiopia"
 msgstr "Etiopía"
@@ -1525,7 +1525,7 @@ msgid "ID"
 msgstr "ID"
 
 msgid "IP addresses of domain name servers used to resolve host names."
-msgstr ""
+msgstr "Dirección IP de los servidores DNS que deben resolver los nombres de host."
 
 msgid "IPv4"
 msgstr "IPv4"
@@ -2108,10 +2108,10 @@ msgid "Network"
 msgstr "Red"
 
 msgid "Network interface '%s' (type=%s) already exists"
-msgstr ""
+msgstr "La interfaz de red '%s' (type=%s) ya existe"
 
 msgid "Network interfaces"
-msgstr ""
+msgstr "Interfaces de red"
 
 msgid "Neutral Zone"
 msgstr "Zona neutra"
@@ -2779,7 +2779,7 @@ msgid "SSH public key"
 msgstr "Llave pública SSH"
 
 msgid "SSID"
-msgstr ""
+msgstr "SSID"
 
 msgid "SSL/TLS"
 msgstr "SSL/TLS"
@@ -3684,7 +3684,7 @@ msgid "Tonga"
 msgstr "Tonga"
 
 msgid "Total"
-msgstr ""
+msgstr "Total"
 
 msgid "Transfer log"
 msgstr "Log de transferencia"
@@ -3936,7 +3936,7 @@ msgid "WINS support"
 msgstr "Soporte WINS"
 
 msgid "WOL"
-msgstr ""
+msgstr "WOL"
 
 msgid "Wake Island"
 msgstr "Isla Wake"
@@ -3983,7 +3983,7 @@ msgid "When failed"
 msgstr "Cuando falle"
 
 msgid "Wi-Fi"
-msgstr ""
+msgstr "Wi-Fi"
 
 msgid "Wipe"
 msgstr "Borrar"
