--- a/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-24 10:02+0200\n"
-"PO-Revision-Date: 2015-05-24 08:02+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-05-24 08:10+0000\n"
+"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/projects/p/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -203,10 +203,10 @@ msgid "Add"
 msgstr "Aggiungi"
 
 msgid "Add VLAN connection"
-msgstr ""
+msgstr "Aggiungi connessione VLAN"
 
 msgid "Add Wi-Fi connection"
-msgstr ""
+msgstr "Aggiungi connessione Wi-Fi"
 
 msgid "Add bond connection"
 msgstr ""
@@ -215,7 +215,7 @@ msgid "Add devices to RAID device"
 msgstr "Aggiungi dispositivi al dispositivo RAID"
 
 msgid "Add ethernet connection"
-msgstr ""
+msgstr "Aggiungi connessione ethernet"
 
 msgid "Add firewall rule"
 msgstr "Aggiungi regola del firewall"
@@ -777,7 +777,7 @@ msgid "DHCP"
 msgstr "DHCP"
 
 msgid "DNS servers"
-msgstr ""
+msgstr "Server DNS"
 
 msgid "Daemon"
 msgstr "Demone"
@@ -1030,16 +1030,16 @@ msgid "Edit SSL certificate"
 msgstr "Modifica il certificato SSL"
 
 msgid "Edit VLAN connection"
-msgstr ""
+msgstr "Modifica connessione VLAN"
 
 msgid "Edit Wi-Fi connection"
-msgstr ""
+msgstr "Modifica connessione Wi-Fi"
 
 msgid "Edit bond connection"
 msgstr ""
 
 msgid "Edit ethernet connection"
-msgstr ""
+msgstr "Modifica connessione ethernet"
 
 msgid "Edit firewall rule"
 msgstr "Modifica regola firewall"
@@ -1200,7 +1200,7 @@ msgid "Estonia"
 msgstr "Estonia"
 
 msgid "Ethernet"
-msgstr ""
+msgstr "Ethernet"
 
 msgid "Ethiopia"
 msgstr "Etiopia"
@@ -1274,7 +1274,7 @@ msgid "Failed to get list of network interface devices"
 msgstr "Impossibile ottenere lista di dispositivi di rete"
 
 msgid "Failed to get list of unused network interface devices"
-msgstr ""
+msgstr "Impossibile ottenere lista di dispositivi di rete"
 
 msgid "Failed to get list of users."
 msgstr "Impossibile ottenere lista di utenti."
@@ -1687,7 +1687,7 @@ msgid "Invalid group name"
 msgstr "Nome del gruppo non valido"
 
 msgid "Invalid host name"
-msgstr ""
+msgstr "Nome dell'host non valido"
 
 msgid "Invalid line: %s"
 msgstr "Linea non valida: %s"
@@ -2113,7 +2113,7 @@ msgid "Network interface '%s' (type=%s) already exists"
 msgstr ""
 
 msgid "Network interfaces"
-msgstr ""
+msgstr "Iinterfacce di rete"
 
 msgid "Neutral Zone"
 msgstr "Zona Neutrale"
@@ -2335,7 +2335,7 @@ msgid "Perform a trial run with no changes made"
 msgstr "Esegue un'esecuzione di prova senza apportare cambiamenti"
 
 msgid "Performance statistics"
-msgstr ""
+msgstr "Statistiche di performance"
 
 msgid "Period of validity"
 msgstr "Periodo di validità"
@@ -2652,7 +2652,7 @@ msgid "Remove"
 msgstr "Rimuovi"
 
 msgid "Remove devices from RAID device"
-msgstr ""
+msgstr "Rimuovi dispositivi al dispositivo RAID"
 
 msgid "Replace"
 msgstr "Sostituisci"
@@ -2781,7 +2781,7 @@ msgid "SSH public key"
 msgstr "Chiave pubblica SSH"
 
 msgid "SSID"
-msgstr ""
+msgstr "SSID"
 
 msgid "SSL/TLS"
 msgstr "SSL/TLS"
@@ -2907,7 +2907,7 @@ msgid "Select devices to be added to the RAID device"
 msgstr "Scegli i dispositivi che devono essere aggiunti al dispositivo RAID"
 
 msgid "Select devices to be removed from the RAID device."
-msgstr ""
+msgstr "Scegli i dispositivi che devono essere rimossi dal dispositivo RAID"
 
 msgid "Select or enter a user name ..."
 msgstr "Scegli o inserisci un nome utente..."
@@ -3475,27 +3475,27 @@ msgid "This field should be a IPv6 network address in CIDR notation"
 msgstr "Questo campo dovrebbe essere un indirizzo di rete IPv6 secondo la notazione CIDR"
 
 msgid "This field should be a domain name or an IP address"
-msgstr ""
+msgstr "Questo campo dovrebbe essere un nome di dominio o un indirizzo IP"
 
 msgid "This field should be a domain name or an IPv4 address"
-msgstr ""
+msgstr "Questo campo dovrebbe essere un nome di dominio o un indirizzo IPv4"
 
 msgid "This field should be a host name or an IP address"
-msgstr ""
+msgstr "Questo campo dovrebbe essere un hostname o un indirizzo IP"
 
 msgid "This field should be a host name or an IPv4 address"
-msgstr ""
+msgstr "Questo campo dovrebbe essere un hostname o un indirizzo IPv4"
 
 msgid "This field should be a list of domain names or IP addresses"
-msgstr ""
+msgstr "Questo campo dovrebbe essere una lista di nomi di dominio o indirizzi IP"
 
 msgid ""
 "This field should be a list of domain names or IP addresses seperated by <,>"
 " or <;>"
-msgstr ""
+msgstr "Questo campo dovrebbe essere una lista di nomi di dominio o indirizzi IP separati da <,> oppure <;>"
 
 msgid "This field should be a list of host names or IP addresses"
-msgstr ""
+msgstr "Questo campo dovrebbe essere una lista di hostname o indirizzi IP"
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3686,7 +3686,7 @@ msgid "Tonga"
 msgstr "Tonga"
 
 msgid "Total"
-msgstr ""
+msgstr "Totale"
 
 msgid "Transfer log"
 msgstr "Log di trasferimento"
@@ -3938,7 +3938,7 @@ msgid "WINS support"
 msgstr "Supporto WINS"
 
 msgid "WOL"
-msgstr ""
+msgstr "WOL"
 
 msgid "Wake Island"
 msgstr "Isola di Wake"
@@ -3985,7 +3985,7 @@ msgid "When failed"
 msgstr "Quando fallisce"
 
 msgid "Wi-Fi"
-msgstr ""
+msgstr "Wi-Fi"
 
 msgid "Wipe"
 msgstr "Ripristino dati di fabbrica"
