--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (2.0.11) stable; urgency=low
 
   * Use 'deadline' I/O scheduler for non-rotating devices.
+  * Mantis 0001342: Unable to save firewall rules.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 25 May 2015 16:59:09 +0200
 
