--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,8 @@
 openmediavault (2.0.12) stable; urgency=low
 
-  *
+  * Various code improvements
+  * Send a daily report to the administrator if there are pending
+    configuration changes.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 01 Jun 2015 22:31:15 +0200
 
