--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -3,6 +3,8 @@ openmediavault (2.0.12) stable; urgency=low
   * Various code improvements
   * Send a daily report to the administrator if there are pending
     configuration changes.
+  * Add ability to set multiple SSH public keys per user. The user can not
+    add them itself, this must be done by the administrator.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 01 Jun 2015 22:31:15 +0200
 
