--- a/deb/openmediavault/usr/share/openmediavault/locale/gl_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/gl_ES/openmediavault.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-01 21:40+0200\n"
-"PO-Revision-Date: 2015-05-24 08:02+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-06-04 11:56+0000\n"
+"Last-Translator: Miguel Anxo Bouzada <mbouzada@gmail.com>\n"
 "Language-Team: Galician (Spain) (http://www.transifex.com/projects/p/openmediavault/language/gl_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -201,19 +201,19 @@ msgid "Add"
 msgstr "Engadir"
 
 msgid "Add VLAN connection"
-msgstr ""
+msgstr "Engadir unha conexión VLAN"
 
 msgid "Add Wi-Fi connection"
-msgstr ""
+msgstr "Engadir unha conexión Wi-Fi"
 
 msgid "Add bond connection"
-msgstr ""
+msgstr "Engadir unha conexión vinculada"
 
 msgid "Add devices to RAID device"
 msgstr "Engadir dispositivos ao dispositivo RAID"
 
 msgid "Add ethernet connection"
-msgstr ""
+msgstr "Engadir unha conexión ethernet"
 
 msgid "Add firewall rule"
 msgstr "Engadir regra na devasa"
@@ -978,7 +978,7 @@ msgid "Domain name"
 msgstr "Nome de dominio"
 
 msgid "Domains used when resolving host names."
-msgstr ""
+msgstr "Dominios utilizados na resolución de nomes de máquina."
 
 msgid "Dominica"
 msgstr "Dominica"
@@ -1028,16 +1028,16 @@ msgid "Edit SSL certificate"
 msgstr "Editar o certificado SSL"
 
 msgid "Edit VLAN connection"
-msgstr ""
+msgstr "Editar a conexión VLAN"
 
 msgid "Edit Wi-Fi connection"
-msgstr ""
+msgstr "Editar a conexión Wi-Fi"
 
 msgid "Edit bond connection"
-msgstr ""
+msgstr "Editar a conexión vinculada"
 
 msgid "Edit ethernet connection"
-msgstr ""
+msgstr "Editar a conexión ethernet"
 
 msgid "Edit firewall rule"
 msgstr "Editar regra na devasa"
@@ -1198,7 +1198,7 @@ msgid "Estonia"
 msgstr "Estonia"
 
 msgid "Ethernet"
-msgstr ""
+msgstr "Ethernet"
 
 msgid "Ethiopia"
 msgstr "Etiopía"
@@ -1525,7 +1525,7 @@ msgid "ID"
 msgstr "ID"
 
 msgid "IP addresses of domain name servers used to resolve host names."
-msgstr ""
+msgstr "Enderezos IP de servidores de nomes de dominio utilizados para resolver nomes de máquinas."
 
 msgid "IPv4"
 msgstr "IPv4"
@@ -2108,10 +2108,10 @@ msgid "Network"
 msgstr "Rede"
 
 msgid "Network interface '%s' (type=%s) already exists"
-msgstr ""
+msgstr "A interface de rede «%s» (tipo=%s) xa existe"
 
 msgid "Network interfaces"
-msgstr ""
+msgstr "Interfaces de rede"
 
 msgid "Neutral Zone"
 msgstr "Zona neutral"
@@ -2333,7 +2333,7 @@ msgid "Perform a trial run with no changes made"
 msgstr "Realizar unha proba de funcionamento sen facer cambios"
 
 msgid "Performance statistics"
-msgstr ""
+msgstr "Estatísticas de rendemento"
 
 msgid "Period of validity"
 msgstr "Período de vixencia"
@@ -2779,7 +2779,7 @@ msgid "SSH public key"
 msgstr "Chave SSH pública"
 
 msgid "SSID"
-msgstr ""
+msgstr "SSID"
 
 msgid "SSL/TLS"
 msgstr "SSL/TLS"
@@ -3150,7 +3150,7 @@ msgstr "Especifica se se permite acceder como superusuario."
 msgid ""
 "Specifies whether the system performance statistics are collected "
 "periodically."
-msgstr ""
+msgstr "Especifica se as estatísticas de rendemento do sistema van recollerse periodicamente."
 
 msgid ""
 "Specifies whether to monitor the system status and select the most "
@@ -3385,7 +3385,7 @@ msgid ""
 msgstr "Os permisos de ficheiros e directorios novos son gobernados pola creación da máscara e a máscara de directorio, mais o parámetro herdar permisos anula isto. Isto pode ser particularmente útil en sistemas con moitos usuarios para permitir usar unha soa acción flexíbel para cada usuario."
 
 msgid "The public key in RFC 4716 SSH public key file format."
-msgstr ""
+msgstr "A chave pública en formato de ficheiro de chave pública SSH RFC 4716."
 
 msgid ""
 "The repository will be checked for new, removed or upgraded software "
@@ -3684,7 +3684,7 @@ msgid "Tonga"
 msgstr "Tonga"
 
 msgid "Total"
-msgstr ""
+msgstr "Total"
 
 msgid "Transfer log"
 msgstr "Rexistro das transferencias"
@@ -3921,7 +3921,7 @@ msgid "Vietnam"
 msgstr "Vietnam"
 
 msgid "VirtIO device"
-msgstr ""
+msgstr "Dispositivo VirtIO"
 
 msgid "Volume"
 msgstr "Volume"
@@ -3936,7 +3936,7 @@ msgid "WINS support"
 msgstr "Compatibilidade con WINS"
 
 msgid "WOL"
-msgstr ""
+msgstr "WOL"
 
 msgid "Wake Island"
 msgstr "Illa de Wake"
@@ -3983,7 +3983,7 @@ msgid "When failed"
 msgstr "Cando se produza un fallo"
 
 msgid "Wi-Fi"
-msgstr ""
+msgstr "Wi-Fi"
 
 msgid "Wipe"
 msgstr "Varrido"
