--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.0.13) stable; urgency=low
+
+  *
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 09 Jun 2015 00:14:43 +0200
+
 openmediavault (2.0.12) stable; urgency=low
 
   * Update locales.
