--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (2.0.14) stable; urgency=low
+
+  * Add temporary workaround to fix rendering bug in Chrome 43.
+    See https://code.google.com/p/chromium/issues/detail?id=489875.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 10 Jun 2015 03:14:11 +0200
+
 openmediavault (2.0.13) stable; urgency=low
 
   * Various improvements.
