--- a/deb/openmediavault/usr/share/openmediavault/locale/openmediavault.pot
+++ b/deb/openmediavault/usr/share/openmediavault/locale/openmediavault.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-05-24 10:02+0200\n"
+"POT-Creation-Date: 2015-06-11 22:38+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -221,6 +221,9 @@ msgid "Add hot spares / recover RAID device"
 msgstr ""
 
 msgid "Add module"
+msgstr ""
+
+msgid "Add public key"
 msgstr ""
 
 msgid "Add rsync job"
@@ -982,6 +985,9 @@ msgstr ""
 msgid "Edit"
 msgstr ""
 
+msgid "Edit SSH certificate"
+msgstr ""
+
 msgid "Edit SSL certificate"
 msgstr ""
 
@@ -1525,6 +1531,9 @@ msgstr ""
 msgid "Import"
 msgstr ""
 
+msgid "Import SSH certificate"
+msgstr ""
+
 msgid "Import SSL certificate"
 msgstr ""
 
@@ -1592,6 +1601,9 @@ msgid "Installing updates ..."
 msgstr ""
 
 msgid "Interfaces"
+msgstr ""
+
+msgid "Invalid SSH public key (RFC 4716)"
 msgstr ""
 
 msgid "Invalid domain name"
@@ -2407,7 +2419,13 @@ msgstr ""
 msgid "Public"
 msgstr ""
 
+msgid "Public key"
+msgstr ""
+
 msgid "Public key authentication"
+msgstr ""
+
+msgid "Public keys"
 msgstr ""
 
 msgid "Puerto Rico"
@@ -2644,10 +2662,10 @@ msgstr ""
 msgid "SSH"
 msgstr ""
 
-msgid "SSH public key"
+msgid "SSID"
 msgstr ""
 
-msgid "SSID"
+msgid "SSL"
 msgstr ""
 
 msgid "SSL/TLS"
@@ -2723,6 +2741,9 @@ msgid "Secure connection"
 msgstr ""
 
 msgid "Security level"
+msgstr ""
+
+msgid "Select a SSH certificate ..."
 msgstr ""
 
 msgid "Select a SSL certificate ..."
@@ -3136,6 +3157,9 @@ msgstr ""
 msgid "The RSA key length."
 msgstr ""
 
+msgid "The RSA public key in OpenSSH format."
+msgstr ""
+
 msgid "The SSL certificate."
 msgstr ""
 
@@ -3216,6 +3240,9 @@ msgid "The path of the folder to share. The specified folder will be created if 
 msgstr ""
 
 msgid "The permissions on new files and directories are normally governed by create mask and directory mask but the inherit permissions parameter overrides this. This can be particularly useful on systems with many users to allow a single share to be used flexibly by each user."
+msgstr ""
+
+msgid "The private RSA key in X.509 PEM format."
 msgstr ""
 
 msgid "The public key in RFC 4716 SSH public key file format."
